Header Fix Collapse

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,7 +27,7 @@
     }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1320px) {
     .header {
         font-size: 13.5vw;
     }
